--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "fflate": "^0.8.2",
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@eslint/js": "^9.17.0",
     "@types/antd": "^1.0.4",
+    "@types/babel__core": "^7.20.5",
     "@types/babel__standalone": "^7.1.9",
     "@types/file-saver": "^2.0.7",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
     "@typescript/ata": "^0.9.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "allotment": "^1.20.2",
@@ -44,6 +45,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-externals": "^0.6.2"
   }
 }
