--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "react-playground",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
@@ -23,12 +24,15 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.13.0",
     "@babel/core": "^7.26.0",
+    "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.17.0",
     "@types/antd": "^1.0.4",
     "@types/babel__core": "^7.20.5",
     "@types/babel__standalone": "^7.1.9",
     "@types/file-saver": "^2.0.7",
+    "@types/node": "^22.10.5",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
     "@typescript/ata": "^0.9.7",
