--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.13.0",
     "@babel/core": "^7.26.0",
+    "@babel/types": "^7.26.5",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.17.0",
     "@types/antd": "^1.0.4",
     "@types/babel__core": "^7.20.5",
     "@types/babel__standalone": "^7.1.9",
     "@types/file-saver": "^2.0.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.10.5",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
