--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "react-playground",
   "type": "module",
   "version": "0.0.0",
-  "private": true,
+  "author": "Ink",
+  "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "rsbuild dev",
+    "build": "rsbuild build",
+    "preview": "rsbuild preview",
     "lint": "eslint .",
-    "preview": "vite preview",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
@@ -20,8 +21,8 @@
     "fflate": "^0.8.2",
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.13.0",
@@ -29,6 +30,9 @@
     "@babel/types": "^7.26.5",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.17.0",
+    "@rsbuild/core": "^1.2.1",
+    "@rsbuild/plugin-react": "^1.1.0",
+    "@rspack/core": "^1.2.2",
     "@types/antd": "^1.0.4",
     "@types/babel__core": "^7.20.5",
     "@types/babel__standalone": "^7.1.9",
@@ -41,17 +45,21 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "allotment": "^1.20.2",
     "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "file-saver": "^2.0.5",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
+    "raw-loader": "^4.0.2",
     "sass-embedded": "^1.83.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
-    "vite-plugin-externals": "^0.6.2"
+    "vite-plugin-externals": "^0.6.2",
+    "worker-loader": "^3.0.8",
+    "worker-rspack-loader": "^3.1.2"
   }
 }
